fixed text wrapping issue with client details section

--- a/src/components/teamTile/teamMember.scss
+++ b/src/components/teamTile/teamMember.scss
@@ -1,6 +1,9 @@
 @import '../../scss/variables';
 
 .team-member {
+  .overlay-wrapper-inner {
+    clip-path: circle(7.8rem at center);
+  }
   font-family: $ec-headings-font-family;
   text-align: center;
 
