--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -229,7 +229,7 @@ a {
   overflow-x: hidden !important;
   min-height: 100vh !important;
   background-repeat: repeat;
-  background-size: 25% !important;
+  background-size: 35% !important;
 }
 
 // fixing testimonial slider overflow
